[gd_scene load_steps=9 format=3 uid="uid://b1ukj1kb182ja"]

[ext_resource type="PackedScene" uid="uid://dcewehjvldfkq" path="res://Environments/Levels/tile_map.tscn" id="1_hxh0e"]
[ext_resource type="Script" path="res://Scripts/LevelHandler.gd" id="1_rvl2s"]
[ext_resource type="Script" path="res://Scripts/Player Handler.gd" id="2_260d3"]
[ext_resource type="PackedScene" uid="uid://cputoiykjvyow" path="res://Objects/player.tscn" id="3_42ub0"]
[ext_resource type="Theme" uid="uid://6g50mxodmcvl" path="res://UI Styles/menu_buttons.tres" id="5_clftl"]
[ext_resource type="Script" path="res://Scripts/Treasure Handler.gd" id="6_bi5dt"]
[ext_resource type="Script" path="res://Scripts/Enemy Handler.gd" id="6_qsici"]
[ext_resource type="PackedScene" uid="uid://bgdbr2f4waw4l" path="res://Environments/Menus/level_cleared_screen.tscn" id="7_agra0"]

[node name="LevelTemplate" type="Node2D"]
script = ExtResource("1_rvl2s")
next_level = "res://Environments/Menus/main_menu.tscn"

[node name="TileMap" parent="." instance=ExtResource("1_hxh0e")]
unique_name_in_owner = true
layer_0/tile_data = PackedInt32Array(2, 65537, 0, 1, 65537, 0, 65536, 1, 1, 65537, 327681, 0, 65538, 65537, 2, 65539, 65537, 2, 65540, 65537, 2, 65541, 65537, 2, 65542, 65537, 2, 131074, 1, 8, 131073, 131073, 1, 131072, 1, 1, 131075, 1, 8, 131076, 1, 8, 131077, 1, 8, 131078, 1, 8, 6, 65537, 0, 5, 65537, 0, 3, 65537, 0, 4, 65537, 0, 0, 1, 0, 7, 65537, 0, 8, 65537, 0, 9, 65537, 0, 10, 65537, 0, 11, 65537, 0, 12, 65537, 0, 13, 65537, 0, 14, 65537, 0, 15, 65537, 0, 16, 65537, 0, 17, 65537, 0, 18, 65537, 0, 19, 131073, 0, 65555, 131073, 1, 131091, 131073, 1, 196627, 131073, 1, 262163, 131073, 1, 327699, 131073, 1, 393235, 131073, 1, 458771, 131073, 1, 524307, 131073, 1, 589843, 131073, 1, 655379, 131073, 1, 720915, 131073, 2, 720914, 65537, 2, 720913, 65537, 2, 720912, 65537, 2, 720911, 65537, 2, 720910, 65537, 2, 720909, 65537, 2, 720908, 65537, 2, 720907, 65537, 2, 720906, 65537, 2, 720905, 65537, 2, 720904, 65537, 2, 720903, 65537, 2, 720902, 65537, 2, 720901, 65537, 2, 720900, 65537, 2, 720899, 65537, 2, 720898, 65537, 2, 720897, 65537, 2, 655360, 1, 1, 720896, 1, 2, 589824, 1, 1, 524288, 1, 1, 458752, 1, 1, 393216, 1, 1, 327680, 1, 1, 262144, 1, 1, 196608, 1, 1, 65543, 65537, 2, 65544, 65537, 2, 65545, 65537, 2, 65546, 65537, 2, 65547, 65537, 2, 65548, 65537, 2, 65549, 65537, 2, 65550, 65537, 2, 65551, 65537, 2, 65552, 65537, 2, 65553, 65537, 2, 65554, 393217, 0, 655378, 393217, 1, 655377, 65537, 0, 655376, 65537, 0, 655375, 65537, 0, 655374, 65537, 0, 655373, 65537, 0, 655372, 65537, 0, 655371, 65537, 0, 655370, 65537, 0, 655369, 65537, 0, 655368, 65537, 0, 655367, 65537, 0, 655366, 65537, 0, 655365, 65537, 0, 655364, 65537, 0, 655363, 65537, 0, 655362, 65537, 0, 655361, 327681, 1, 589825, 131073, 1, 524289, 131073, 1, 458753, 131073, 1, 393217, 131073, 1, 327681, 131073, 1, 262145, 131073, 1, 196609, 131073, 1, 131090, 1, 1, 196626, 1, 1, 262162, 1, 1, 327698, 1, 1, 393234, 1, 1, 458770, 1, 1, 524306, 1, 1, 589842, 1, 1, 131079, 1, 8, 131080, 1, 8, 131081, 1, 8, 131082, 1, 8, 131083, 1, 8, 131084, 1, 8, 131085, 1, 8, 131086, 1, 8, 131087, 1, 8, 131088, 1, 8, 131089, 1, 8, 196625, 1, 8, 262161, 1, 8, 327697, 1, 8, 393233, 1, 8, 393232, 1, 8, 458768, 1, 8, 524304, 1, 8, 524305, 1, 8, 589841, 1, 8, 458769, 1, 8, 589840, 1, 8, 589839, 1, 8, 589838, 1, 8, 589837, 1, 8, 589836, 1, 8, 589835, 1, 8, 589834, 1, 8, 589833, 1, 8, 589832, 1, 8, 589831, 1, 8, 589830, 1, 8, 589829, 1, 8, 589828, 1, 8, 589827, 1, 8, 589826, 1, 8, 524290, 1, 8, 458754, 1, 8, 393218, 1, 8, 327682, 1, 8, 262146, 1, 8, 196610, 1, 8, 196611, 1, 8, 196612, 1, 8, 196613, 1, 8, 196614, 1, 8, 196615, 1, 8, 196616, 1, 8, 196617, 1, 8, 196618, 1, 8, 196619, 1, 8, 196620, 1, 8, 196621, 1, 8, 196622, 1, 8, 196623, 1, 8, 196624, 1, 8, 262160, 1, 8, 327696, 1, 8, 393231, 1, 8, 458767, 1, 8, 524303, 1, 8, 524302, 1, 8, 524301, 1, 8, 524300, 1, 8, 524299, 1, 8, 524298, 1, 8, 524297, 1, 8, 524296, 1, 8, 524295, 1, 8, 524294, 1, 8, 524293, 1, 8, 524292, 1, 8, 524291, 1, 8, 458755, 1, 8, 393219, 1, 8, 327683, 1, 8, 262147, 1, 8, 262148, 1, 8, 262149, 1, 8, 262150, 1, 8, 262151, 1, 8, 262152, 1, 8, 262153, 1, 8, 262154, 1, 8, 262155, 1, 8, 262156, 1, 8, 262157, 1, 8, 262158, 1, 8, 262159, 1, 8, 327695, 1, 8, 458766, 1, 8, 458763, 1, 8, 458762, 1, 8, 458761, 1, 8, 458760, 1, 8, 458759, 1, 8, 458758, 1, 8, 458757, 1, 8, 458756, 1, 8, 393220, 1, 8, 327684, 1, 8, 327685, 1, 8, 327686, 1, 8, 327687, 1, 8, 393224, 1, 8, 393225, 1, 8, 393226, 1, 8, 393227, 1, 8, 393228, 1, 8, 393229, 1, 8, 327692, 1, 8, 327691, 1, 8, 327690, 1, 8, 327689, 1, 8, 327688, 1, 8, 393222, 1, 8, 393221, 1, 8, 393223, 1, 8, 393230, 1, 8, 458765, 1, 8, 458764, 1, 8, 327694, 1, 8, 327693, 1, 8)

[node name="Player Handler" type="Node2D" parent="."]
script = ExtResource("2_260d3")

[node name="Player1" parent="Player Handler" instance=ExtResource("3_42ub0")]
position = Vector2(240, 240)

[node name="Enemy Handler" type="Node2D" parent="."]
script = ExtResource("6_qsici")

[node name="Treasure Handler" type="Node2D" parent="."]
script = ExtResource("6_bi5dt")

[node name="UI" type="Control" parent="."]
z_index = 1
y_sort_enabled = true
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
theme = ExtResource("5_clftl")

[node name="Menu" type="Control" parent="UI"]
visible = false
z_index = 1
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="TextureRect" type="ColorRect" parent="UI/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="CenterContainer" type="CenterContainer" parent="UI/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Menu/CenterContainer"]
layout_mode = 2

[node name="Menu_Level_Select_Button" type="Button" parent="UI/Menu/CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level Select"

[node name="Menu_Restart_Button" type="Button" parent="UI/Menu/CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Restart"

[node name="Menu_Skip_Level_Button" type="Button" parent="UI/Menu/CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Skip Level"

[node name="level_cleared_screen" parent="UI" instance=ExtResource("7_agra0")]
visible = false
layout_mode = 1

[connection signal="player_moved" from="Player Handler" to="." method="_on_player_handler_player_moved"]
[connection signal="pressed" from="UI/Menu/CenterContainer/HBoxContainer/Menu_Level_Select_Button" to="." method="_on_menu_level_select_button_pressed"]
[connection signal="pressed" from="UI/Menu/CenterContainer/HBoxContainer/Menu_Restart_Button" to="." method="_on_menu_restart_button_pressed"]
[connection signal="pressed" from="UI/Menu/CenterContainer/HBoxContainer/Menu_Skip_Level_Button" to="." method="_on_menu_skip_level_button_pressed"]
